--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
     </header>
-    <section class="grid-test">
+    <!-- 
+              Grid Practice
+      <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">Col 1 of 2</div>
         <div class="col-1-of-2">Col 1 of 2</div>
@@ -64,6 +66,6 @@
         <div class="col-1-of-4">Col 1 of 4</div>
         <div class="col-3-of-4">Col 3 of 4</div>
       </div>
-    </section>
-  </body>
+    </section> 
+  --></body>
 </html>
