Commented out grid

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
     </header>
-  --></body>
-  </html>
-  
-  <!-- 
+  </body>
+</html>
+
+<!-- 
             Grid Practice
     <section class="grid-test">
     <div class="row">
@@ -70,3 +70,4 @@
       <div class="col-3-of-4">Col 3 of 4</div>
     </div>
   </section> 
+-->
